--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -1,5 +1,68 @@
-
-body{
-    background-color: var(--home-color);
+body {
+    padding: 0;
+    margin: 0;
 }
 
+
+
+/*START HOME*/
+
+
+/*achtergrond*/
+main {
+    background-color: var(#a4cef8);
+    background-image: url(/svg/house-mouse.svg);
+    height: 100vh;
+    background-size: cover;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
+    background-repeat: no-repeat;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
+    background-position: center;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
+    line-height: 1.5;
+    gap: 2em;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.h1-tekstballon {
+    font-family: var(--font-poppins);
+    font-size: var(--body-text-paragraph);
+    padding: .2em;
+    font-weight: normal;
+
+}
+
+/*tekstballon*/
+.wolkje {
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    padding: 1.5em;
+    height: 7em;
+    margin-bottom: 3em;
+    border-radius: 1.5em;
+    width: 225px;
+    margin-left: 1em;
+}
+
+/*uitsteksel bij het wolkje om het een tekstwolkje word*/
+.wolkje::after {
+    content: "";
+    /*dit moet altijd er staan anders werkt het niet*/
+    position: absolute;
+    top: calc(100% - .5px);
+    /*hoe groot het is*/
+    left: 2em;
+    width: 8em;
+    height: 3em;
+
+    background-color: inherit;
+
+    clip-path: polygon(40% 0%,
+            80% 0%,
+            90% 90%,
+            40% 0%)
+}
