--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -15,13 +15,16 @@ header {
     width: 100%;
     z-index: 100;
 
-    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem)); /*hoe groot de cirkel*/
-    transition: clip-path 0.5s ease-in-out; /*hoe snel het menu opent*/
+    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem));
+    /*hoe groot de cirkel*/
+    transition: clip-path 0.5s ease-in-out;
+    /*hoe snel het menu opent*/
 }
 
 /*hoe het menu tevoorschijn komt*/
 .show-menu {
-    clip-path: circle(80%); /*maakt de cirkel als het menu opent*/
+    clip-path: circle(80%);
+    /*maakt de cirkel als het menu opent*/
 }
 
 /*vierkanten in het menu bij elk kopje*/
@@ -34,54 +37,13 @@ header {
 }
 
 /*tekst in het menu*/
-/* .kopje {
+.kopje {
     font-family: var(--font-poppins);
     font-size: 16px;
     color: var(--button-text-color);
     font-weight: normal;
-    margin-top: .4em;
-} */
-
-.kopje-1{
-    font-family: var(--font-poppins);
-    font-size: 16px;
-    color: var(--button-text-color);
-    font-weight: normal;
-    
+    margin-top: .7em;
 }
-
-.kopje-2{
-    font-family: var(--font-poppins);
-    font-size: 16px;
-    color: var(--button-text-color);
-    font-weight: normal;
-   margin-right: 1em;
-}
-
-.kopje-3{
-    font-family: var(--font-poppins);
-    font-size: 16px;
-    color: var(--button-text-color);
-    font-weight: normal;
-   
-}
-
-.kopje-4{
-    font-family: var(--font-poppins);
-    font-size: 16px;
-    color: var(--button-text-color);
-    font-weight: normal;
-    
-}
-
-.kopje-5{
-    font-family: var(--font-poppins);
-    font-size: 16px;
-    color: var(--button-text-color);
-    font-weight: normal;
-   
-}
-
 
 
 /*de layout in het menu*/
@@ -96,82 +58,127 @@ ul {
 }
 
 
-.huis{  /*vierkant om het huisje*/
+/*HOME*/
+
+.huis {
+    /*vierkant om het huisje*/
     background-color: var(--home-color);
     width: 5em;
     height: 5em;
     border-radius: var(--border-radius-button);
+    display: flex;
     justify-content: center;
-    justify-self: end;
-    align-self: end;
+    align-items: center;
+}
+
+.home {
+    display: flex;
+    align-items: center;
+}
+
+.svg-home {
+    /*huisje*/
+    display: block;
 }
 
 
-.testen{  /*vierkant om de puzzel*/
+
+/*TESTING*/
+
+.testen {
+    /*vierkant om de puzzel*/
     background-color: var(--testing-color);
     width: 5em;
     height: 5em;
     border-radius: var(--border-radius-button);
+    display: flex;
     justify-content: center;
-    justify-self: start;
-    align-self: start;
+    align-items: center;
 }
 
-.les{  /*vierkant om het boek*/
+.testing {
+    display: flex;
+    align-items: center;
+}
+
+.svg-testing {
+    /*puzzel*/
+    display: block;
+}
+
+
+
+/*LESSONS*/
+
+.les {
+    /*vierkant om het boek*/
     background-color: var(--lessons-color);
     width: 5em;
     height: 5em;
     border-radius: var(--border-radius-button);
+    display: flex;
     justify-content: center;
-    justify-self: end;
+    align-items: center;
 }
 
-.doelen{   /*vierkant om het tabel*/
+.lessons-nav {
+    display: flex;
+    align-items: center;
+}
+
+.svg-lessons {
+    /*boek*/
+    display: block;
+}
+
+
+
+/*STATISTICS*/
+
+.doelen {
+    /*vierkant om het tabel*/
     background-color: var(--statistics-color);
     width: 5em;
     height: 5em;
     border-radius: var(--border-radius-button);
+    display: flex;
     justify-content: center;
-    justify-self: start;
+    align-items: center;
 }
 
-.gebruiker{   /*vierkant om de persoon*/
+.statistics {
+    display: flex;
+    align-items: center;
+}
+
+.svg-statistics {
+    /*tabel*/
+    display: block;
+}
+
+
+/*PROFILE*/
+
+.gebruiker {
+    /*vierkant om de persoon*/
     background-color: var(--profile-color);
     width: 5em;
     height: 5em;
     border-radius: var(--border-radius-button);
+    display: flex;
     justify-content: center;
-    justify-self: end;
-    align-self: start;
+    align-items: center;
 }
 
-
-.svg-home{  /*huisje*/
-    margin-left: 1.15em;
-    margin-top: 1.05em; 
+.profile {
+    display: flex;
+    align-items: center;
 }
 
-.svg-testing{  /*puzzel*/
-    margin-left: 1.15em;
-    margin-top: 1.05em; 
+.svg-profile {
+    /*persoon*/
+    display: block;
 }
-
-.svg-lessons{  /*boek*/
-    margin-left: 1.15em;
-    margin-top: 1.05em; 
-}
-
-.svg-statistics{  /*tabel*/
-    margin-left: 1.3em;
-    margin-top: 1.45em; 
-}
-
-.svg-profile{  /*persoon*/
-    margin-left: 1.15em;
-    margin-top: 1.05em; 
-}
-
-
 
 
 
@@ -180,12 +187,13 @@ ul {
 
 /*BEGIN VRAAGTEKEN*/
 
-.vraagteken{  /*waar het vraagteken moet staan*/
+.vraagteken {
+    /*waar het vraagteken moet staan*/
     display: flex;
     flex-direction: row;
     justify-content: end;
     margin-right: 2em;
-    margin-bottom: 4em; 
+    margin-bottom: 4em;
 }
 
 
@@ -209,9 +217,12 @@ main {
     background-color: var(#a4cef8);
     background-image: url(/svg/house-mouse.svg);
     height: 100vh;
-    background-size: cover; /*dat de achtergrond meebeweegt met de grote van het scherm*/
-    background-repeat: no-repeat;/*dat de achtergrond meebeweegt met de grote van het scherm*/
-    background-position: center;/*dat de achtergrond meebeweegt met de grote van het scherm*/
+    background-size: cover;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
+    background-repeat: no-repeat;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
+    background-position: center;
+    /*dat de achtergrond meebeweegt met de grote van het scherm*/
     line-height: 1.5;
     gap: 2em;
     padding: 0;
@@ -279,7 +290,7 @@ span {
     border: var(--border-button);
 }
 
-.lessons:hover{
+.lessons:hover {
     text-decoration: underline;
     background: var(--background-gradient-all-buttons);
 }
@@ -295,8 +306,10 @@ span {
 /*wolkje na 12 uur 's nachts*/
 .moved-down .greeting,
 .moved-down .sub-text {
-    transform: translateY(-.8em); /*hoe het staat*/
-    transition: transform 0.5s ease; /* hoe lang het duurt*/
+    transform: translateY(-.8em);
+    /*hoe het staat*/
+    transition: transform 0.5s ease;
+    /* hoe lang het duurt*/
 }
 
 
@@ -326,7 +339,7 @@ span {
 }
 
 button {
-    background-color: var( --general-color);
+    background-color: var(--general-color);
     border-radius: var(--border-radius-button);
     width: 5em;
     height: 5em;
@@ -334,7 +347,8 @@ button {
     position: fixed;
     right: 2em;
     bottom: 2em;
-    z-index: 101; /*dat het elemnt nu boven andere elementen staat*/
+    z-index: 101;
+    /*dat het elemnt nu boven andere elementen staat*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -342,7 +356,7 @@ button {
 
 }
 
-button:hover{
+button:hover {
     background: var(--background-gradient-all-buttons);
 }
 
@@ -354,9 +368,3 @@ button:hover{
 }
 
 /*EINDE HOME*/
-
-
-
-
-
-
