lijn onder kopje weggehaald, svg als menu open is dat die verandert

--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -46,6 +46,12 @@ header {
 }
 
 
+a:hover {
+    border: none;
+    /*lijn onder de kopjes*/
+}
+
+
 /*de layout in het menu*/
 ul {
     display: grid;
