--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -39,7 +39,7 @@ header {
 /*tekst in het menu*/
 .kopje {
     font-family: var(--font-poppins);
-    font-size: 16px;
+    font-size: var(--body-text-paragraph);
     color: var(--button-text-color);
     font-weight: normal;
     margin-top: .7em;
@@ -86,6 +86,8 @@ ul {
     /*huisje*/
     display: block;
 }
+
+
 
 
 
@@ -212,6 +214,13 @@ article {
 }
 
 
+.hulp-icon:hover{
+    background: var(--background-gradient-all-buttons);
+    border-radius: 50%;
+}
+
+
+
 /*EINDE VRAAGTEKEN*/
 
 
@@ -220,7 +229,7 @@ article {
 
 /*achtergrond*/
 main {
-    background-color: var(#a4cef8);
+    background-color: var(--home-color);
     background-image: url(/svg/house-mouse.svg);
     height: 100vh;
     background-size: cover;
