--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -230,7 +230,7 @@ button.vraagteken {
     background-color: transparent;
     padding: 0;
     right: 1em;
-    top: 0;
+    top: 1.5em;
     z-index: 10;
 }
 
@@ -245,7 +245,8 @@ button.vraagteken:hover {
 
 article {
     display: none;
-    background-color: var(--background-menu);
+    /* background-color: var(--background-menu); */
+    background-color: transparent;
     padding: 0;
     margin: 0;
     height: 100vh;
@@ -253,8 +254,7 @@ article {
 
 section {
     background-color: var(--main-color);
-    margin: 3em;
-
+    margin: 2.5em;
 }
 
 .show-hulp {
@@ -276,8 +276,6 @@ p {
     padding-left: 2em;
     padding-right: 2em;
 }
-
-
 
 
 /*EINDE VRAAGTEKEN*/
