--- a/testing/testing.css
+++ b/testing/testing.css
@@ -1,270 +1,28 @@
 
 body{
     background-color: var(--testing-color);
-}
-
-/*START MENU*/
-
-/*de achtergrond*/
-header {
-    background-color: var(--background-menu);
-    position: fixed;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-
-    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem));
-    /*hoe groot de cirkel*/
-    transition: clip-path 0.5s ease-in-out;
-    /*hoe snel het menu opent*/
-}
-
-/*hoe het menu tevoorschijn komt*/
-.show-menu {
-    clip-path: circle(80%);
-    /*maakt de cirkel als het menu opent*/
-}
-
-/*vierkanten in het menu bij elk kopje*/
-.menu li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: var(--border-radius-button);
-    width: 100%;
-}
-
-/*tekst in het menu*/
-.kopje {
-    font-family: var(--font-poppins);
-    font-size: var(--body-text-paragraph);
-    color: var(--button-text-color);
-    font-weight: normal;
-    margin-top: .7em;
     padding: 0;
+    margin: 0;
 }
-
-.kopje:hover {
-    text-decoration: var(--underline-text-hover);
-}
-
-
-a:hover {
-    border: none;
-    /*lijn onder de kopjes*/
-}
-
-
-/*de layout in het menu*/
-ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    align-items: center;
-    height: 100vh;
-    padding: 0 4rem;
-    column-gap: 1.5em;
-}
-
-
-@keyframes wobble {
-    0% { transform: rotate(0deg); }
-    15% { transform: rotate(5deg); }
-    30% { transform: rotate(-5deg); }
-    45% { transform: rotate(5deg); }
-    60% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
-}
-
-
-/*HOME*/
-
-.huis {
-    /*vierkant om het huisje*/
-    background-color: var(--home-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.home {
-    display: flex;
-    /* align-items: center; */
-    align-self: end;
-}
-
-.svg-home {
-    /*huisje*/
-    display: block;
-}
-
-.huis:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.huis.wobble {
-    animation: wobble 1s infinite;
-}
-
-
-
-/*TESTING*/
-
-.testen {
-    /*vierkant om de puzzel*/
-    background-color: var(--testing-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.testing {
-    display: flex;
-    /* align-items: center; */
-    align-self: end;
-}
-
-.svg-testing {
-    /*puzzel*/
-    display: block;
-}
-
-.testen:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.testen.wobble {
-    animation: wobble 1s infinite;
-}
-
-
-
-/*LESSONS*/
-
-.les {
-    /*vierkant om het boek*/
-    background-color: var(--lessons-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.lessons-nav {
-    display: flex;
-    /* align-items: center; */
-    align-self: center;
-}
-
-.svg-lessons {
-    /*boek*/
-    display: block;
-}
-
-.les:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.les.wobble {
-    animation: wobble 1s infinite;
-}
-
-
-/*STATISTICS*/
-
-.doelen {
-    /*vierkant om het tabel*/
-    background-color: var(--statistics-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.statistics {
-    display: flex;
-    /* align-items: center; */
-    align-self: center;
-}
-
-.svg-statistics {
-    /*tabel*/
-    display: block;
-}
-
-.doelen:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.doelen.wobble {
-    animation: wobble 1s infinite;
-}
-
-
-/*PROFILE*/
-
-.gebruiker {
-    /*vierkant om de persoon*/
-    background-color: var(--profile-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.profile {
-    display: flex;
-    /* align-items: center; */
-    align-self: start;
-}
-
-.svg-profile {
-    /*persoon*/
-    display: block;
-}
-
-.gebruiker:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.gebruiker.wobble {
-    animation: wobble 1s infinite;
-}
-
-
-/*EINDE MENU*/
-
-
 
 
 
 /*START TESTING*/
 
 
+main{
+    display: grid;
+    gap:2em;
+ }
 
+
+/*tekst*/
 h1{
     font-family: var(--font-poppins);
     font-size: var(--heading1);
     color: var(--general-color);
+    display: flex;
+    justify-content: center;
 }
 
 h2{
@@ -278,16 +36,19 @@ h3{
     font-family: var(--font-poppins);
     font-size: var(--heading3);
     color: var(--general-color);
+    margin-left: .5em;
 }
 
 p{
     font-family: var(--font-poppins);
     font-size: var(--body-text-paragraph);
     color: var(--general-color);
+    margin-left: .3em;
 }
 
 .tekst-uitleg{
-    margin-left: .5em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .tekst-link{
@@ -296,19 +57,38 @@ p{
 }
 
 .how{
-    font-weight: var();
+    font-weight: var(--text-bold);
+    margin-left: .3em;
 }
 
-/* .tekst-link:hover{
-text-decoration: var(--underline-text-hover);
-} */
+.tijd{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
 
-
+/*privacy statement*/
 summary{
-    font-family: var();
-    font-size: var();
-    color: var();
+    font-family: var(--font-poppins);
+    font-size: var(--heading3);
+    color: var(--general-color);
+    margin: 1em;
 }
+
+
+
+/*universiteit van Leiden*/
+img{
+    width: 70px;
+    height: 30px;
+}
+
+.klok{
+    display: flex;
+    justify-self: end;
+    align-self: center;
+}
+
 
 button{
     background-color: var(--background-color-button);
@@ -320,80 +100,83 @@ button{
 }
 
 
-img{
-    width: 70px;
-    height: 30px;
-}
-
-
-main{
-   display: grid;
-   gap:2em;
-}
-
+/*attention span test*/
 .do-test-header-1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: aqua;
     border-top-left-radius: var(--border-radius-button) ;
     border-top-right-radius: var(--border-radius-button);
+    display: grid;
+    grid-template-columns: 230px 35px 130px;
+    grid-template-rows: 1fr;
 }
 
 .test-1{
-    /* background-color: var(--main-color); */
     background-color: white;
     border-radius: var(--border-radius-button);
+    margin: 1em;
 }
 
 
+
+/*word recognition*/
 .do-test-header-2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: aqua;
     border-top-left-radius: var(--border-radius-button) ;
     border-top-right-radius: var(--border-radius-button);
+    display: grid;
+    grid-template-columns: 230px 35px 130px;
+    grid-template-rows: 1fr;
 }
 
 .test-2{
     background-color: white;
     border-radius: var(--border-radius-button);
+    margin: 1em;
 }
 
 
 
+/*the first words 1*/
 .do-test-header-3{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: aqua;
     border-top-left-radius: var(--border-radius-button) ;
     border-top-right-radius: var(--border-radius-button);
+    display: grid;
+    grid-template-columns: 230px 35px 130px;
+    grid-template-rows: 1fr;
 }
 
 .test-3{
     /* background-color: var(--main-color); */
     background-color: white;
     border-radius: var(--border-radius-button);
+    margin: 1em;
 }
 
 
 
+/*the first words 2*/
 .do-test-header-4{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: aqua;
     border-top-left-radius: var(--border-radius-button) ;
     border-top-right-radius: var(--border-radius-button);
+    display: grid;
+    grid-template-columns: 230px 35px 130px;
+    grid-template-rows: 1fr;
 }
 
 .test-4{
     /* background-color: var(--main-color); */
     background-color: white;
     border-radius: var(--border-radius-button);
+    margin: 1em;
 }
+
+
+/*EINDE TESTING*/
+
+
+/*BUTTON MENU*/
 
 
 .menu{
@@ -413,13 +196,6 @@ main{
     fill: var(--button-text-color);
 }
 
-
-
-
-/*EINDE TESTING*/
-
-
-/*BUTTON MENU*/
 
 button {
     background-color: var(--general-color);
@@ -448,3 +224,5 @@ button:hover {
     height: 45px;
     fill: var(--button-text-color);
 }
+
+/*EINDE BUTTON*/
