--- a/testing/testing.css
+++ b/testing/testing.css
@@ -35,7 +35,7 @@ h3 {
     font-family: var(--font-poppins);
     font-size: var(--heading3);
     color: var(--general-color);
-    margin-left: .5em;
+    margin-left: .7em;
 }
 
 p {
@@ -46,7 +46,7 @@ p {
 }
 
 .tekst-uitleg {
-    margin-left: 1em;
+    margin-left: 1.5em;
     margin-right: 1em;
 }
 
@@ -68,6 +68,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: .8em;
 }
 
 /*privacy statement*/
@@ -102,6 +103,9 @@ button {
     font-size: var(--font-size-button);
     border: var(--border-button);
     margin: 1em;
+    padding: .5em;
+    display: grid;
+    grid-template-columns: 85px 15px;
 }
 
 
@@ -109,6 +113,12 @@ button {
     display: flex;
     justify-content: space-between;
 }
+
+.button-start-test{
+    display: flex;
+    justify-self: end;
+}
+
 
 
 /*attention span test*/
@@ -181,6 +191,7 @@ button {
     background-color: white;
     border-radius: var(--border-radius-button);
     margin: 1em;
+    margin-bottom: 8em;
 }
 
 
@@ -189,8 +200,6 @@ button {
 
 
 /*BUTTON MENU*/
-
-
 
 .button-menu {
     background-color: var(--general-color);
@@ -220,3 +229,265 @@ button:hover {
 }
 
 /*EINDE BUTTON*/
+
+
+
+/*START MENU*/
+
+/*de achtergrond*/
+header {
+    background-color: var(--background-menu);
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+
+    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem));
+    /*hoe groot de cirkel*/
+    transition: clip-path 0.5s ease-in-out;
+    /*hoe snel het menu opent*/
+}
+
+/*hoe het menu tevoorschijn komt*/
+.show-menu {
+    clip-path: circle(80%);
+    /*maakt de cirkel als het menu opent*/
+}
+
+main > article section {
+    /* clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem)); */
+    /*hoe groot de cirkel*/
+    transition: clip-path 0.5s ease-in-out;
+}
+
+.show-hulp section {
+    clip-path: circle(80%); 
+}
+
+/*vierkanten in het menu bij elk kopje*/
+.menu li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: var(--border-radius-button);
+    width: 100%;
+}
+
+/*tekst in het menu*/
+.kopje {
+    font-family: var(--font-poppins);
+    font-size: var(--body-text-paragraph);
+    color: var(--button-text-color);
+    font-weight: normal;
+    margin-top: .7em;
+    padding: 0;
+}
+
+.kopje:hover {
+    text-decoration: var(--underline-text-hover);
+}
+
+
+a:hover {
+    border: none;
+    /*lijn onder de kopjes*/
+}
+
+
+/*de layout in het menu*/
+ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: center;
+    height: 100vh;
+    padding: 0 4rem;
+    column-gap: 1.5em;
+}
+
+
+@keyframes wobble {
+    0% { transform: rotate(0deg); }
+    15% { transform: rotate(5deg); }
+    30% { transform: rotate(-5deg); }
+    45% { transform: rotate(5deg); }
+    60% { transform: rotate(-5deg); }
+    100% { transform: rotate(0deg); }
+}
+
+
+/*HOME*/
+
+.huis {
+    /*vierkant om het huisje*/
+    background-color: var(--home-color);
+    width: 5em;
+    height: 5em;
+    border-radius: var(--border-radius-button);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.home {
+    display: flex;
+    /* align-items: center; */
+    align-self: end;
+}
+
+.svg-home {
+    /*huisje*/
+    display: block;
+}
+
+.huis:hover {
+    background: var(--background-gradient-all-buttons);
+}
+
+.huis.wobble {
+    animation: wobble 1s infinite;
+}
+
+
+
+/*TESTING*/
+
+.testen {
+    /*vierkant om de puzzel*/
+    background-color: var(--testing-color);
+    width: 5em;
+    height: 5em;
+    border-radius: var(--border-radius-button);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.testing {
+    display: flex;
+    /* align-items: center; */
+    align-self: end;
+}
+
+.svg-testing {
+    /*puzzel*/
+    display: block;
+}
+
+.testen:hover {
+    background: var(--background-gradient-all-buttons);
+}
+
+.testen.wobble {
+    animation: wobble 1s infinite;
+}
+
+
+
+/*LESSONS*/
+
+.les {
+    /*vierkant om het boek*/
+    background-color: var(--lessons-color);
+    width: 5em;
+    height: 5em;
+    border-radius: var(--border-radius-button);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.lessons-nav {
+    display: flex;
+    /* align-items: center; */
+    align-self: center;
+}
+
+.svg-lessons {
+    /*boek*/
+    display: block;
+}
+
+.les:hover {
+    background: var(--background-gradient-all-buttons);
+}
+
+.les.wobble {
+    animation: wobble 1s infinite;
+}
+
+
+/*STATISTICS*/
+
+.doelen {
+    /*vierkant om het tabel*/
+    background-color: var(--statistics-color);
+    width: 5em;
+    height: 5em;
+    border-radius: var(--border-radius-button);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.statistics {
+    display: flex;
+    /* align-items: center; */
+    align-self: center;
+}
+
+.svg-statistics {
+    /*tabel*/
+    display: block;
+}
+
+.doelen:hover {
+    background: var(--background-gradient-all-buttons);
+}
+
+.doelen.wobble {
+    animation: wobble 1s infinite;
+}
+
+
+/*PROFILE*/
+
+.gebruiker {
+    /*vierkant om de persoon*/
+    background-color: var(--profile-color);
+    width: 5em;
+    height: 5em;
+    border-radius: var(--border-radius-button);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.profile {
+    display: flex;
+    /* align-items: center; */
+    align-self: start;
+}
+
+.svg-profile {
+    /*persoon*/
+    display: block;
+}
+
+.gebruiker:hover {
+    background: var(--background-gradient-all-buttons);
+}
+
+.gebruiker.wobble {
+    animation: wobble 1s infinite;
+}
+
+
+/*EINDE MENU*/
